# bloomy-ai

./: .gitignore  Cargo.toml  README.md
examples/: Cargo.toml  get_bloomberg_article.rs
src/: ai.rs  feeds.rs  lib.rs  trader.rs
src/ai/: base.rs  openai.rs
src/examples/: basic.rs
src/feeds/: base.rs  bloomberg.rs
src/terminal/: terminal.rs
src/trader/: coins.rs  jup.rs
