[package]
name = "bloomy-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
base64 = "0.22.1"
bincode = "1.3.3"
bs58 = "0.5.1"
chrono = { version = "0.4.39", features = ["serde"] }
crossterm = "0.28.1"
openai = "1.0.0-alpha.18"
ratatui = "0.29.0"
reqwest = { version = "0.12.12", features = ["json"] }
scraper = "0.22.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
solana-client = "2.1.11"
solana-program = "2.1.11"
solana-sdk = "2.1.11"
spl-token = "7.0.0"
tokio = { version = "1.43.0", features = ["full"] }
